<resources>
    <string name="app_name">Bestor Weather</string>
    <string name="PoweredBy">&lt;a href="https://darksky.net/poweredby/">Powered By Dark Sky&lt;/a></string>
    <string name="currentTemp">--</string>
    <string name="currentFeelsLike">Feels like: -</string>
    <string name="currentPrecip">Precipitation: -%</string>
    <string name="currentWind">Wind: - mph</string>
    <string name="pollen">&lt;a href="https://pollen.com/forecast/extended/pollen">Pollen count&lt;/a></string>
    <string name="hourly_1">--\n--%</string>
    <string name="hourly_2">--\n--%</string>
    <string name="hourly_3">--\n--%</string>
    <string name="hourly_4">--\n--%</string>
    <string name="hourly_5">--\n--%</string>
    <string name="hourly_6">--\n--%</string>
    <string name="hourly_7">--\n--%</string>
    <string name="hourly_8">--\n--%</string>
    <string name="hourly_9">--\n--%</string>
    <string name="hourly_10">--\n--%</string>
    <string name="hourly_11">--\n--%</string>
    <string name="hourly_12">--\n--%</string>
    <string name="hourly_13">--\n--%</string>
    <string name="hourly_14">--\n--%</string>
    <string name="hourly_15">--\n--%</string>
    <string name="hourly_16">--\n--%</string>
    <string name="hourly_17">--\n--%</string>
    <string name="hourly_18">--\n--%</string>
    <string name="day_0_temp">--</string>
    <string name="day_1_temp">--</string>
    <string name="day_2_temp">--</string>
    <string name="day_3_temp">--</string>
    <string name="day_4_temp">--</string>
    <string name="day_5_temp">--</string>
    <string name="day_6_temp">--</string>
    <string name="day_7_temp">--</string>
    <string name="day_0_date">Sat</string>
    <string name="day_1_date">Sun</string>
    <string name="day_2_date">Mon</string>
    <string name="day_3_date">Tue</string>
    <string name="day_4_date">Wed</string>
    <string name="day_5_date">Thur</string>
    <string name="day_6_date">Fri</string>
    <string name="day_7_date">Sat</string>
</resources>
